--- a/web/rc.html
+++ b/web/rc.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Route element classifier</title>
+    <title>Route check v2 prototype</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module">
-      import App from "./src/elements/App.svelte";
+      import App from "./src/rc/App.svelte";
 
       new App({
         target: document.getElementById("app"),
