--- a/rc.html
+++ b/rc.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Route check v2 prototype</title>
-    <script type="module" crossorigin src="/route-element/assets/other-e9484b23.js"></script>
-    <link rel="modulepreload" crossorigin href="/route-element/assets/Layout-1202ee2d.js">
+    <script type="module" crossorigin src="/route-element/assets/other-d0d983b2.js"></script>
+    <link rel="modulepreload" crossorigin href="/route-element/assets/Layout-b626fc7f.js">
     <link rel="stylesheet" href="/route-element/assets/Layout-b67ecc7e.css">
+    <link rel="stylesheet" href="/route-element/assets/rc-b5cd362a.css">
   </head>
   <body>
     <div id="app"></div>
