--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Route element classifier</title>
+    <title>Route check v2 prototype</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module">
-      import App from "./src/elements/App.svelte";
+      import App from "./src/rc/App.svelte";
 
       new App({
         target: document.getElementById("app"),
