--- a/forms.html
+++ b/forms.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infrastructure terminology playground</title>
-    <script type="module" crossorigin src="/route-element/assets/forms-e12fb6df.js"></script>
-    <link rel="modulepreload" crossorigin href="/route-element/assets/pico.jade.min-bf9a7835.js">
+    <script type="module" crossorigin src="/route-element/assets/forms-b654fe82.js"></script>
+    <link rel="modulepreload" crossorigin href="/route-element/assets/pico.jade.min-529c3f30.js">
+    <link rel="modulepreload" crossorigin href="/route-element/assets/Picker-db998d1a.js">
     <link rel="stylesheet" href="/route-element/assets/pico.jade-373998d2.css">
+    <link rel="stylesheet" href="/route-element/assets/Picker-0b1dada3.css">
     <link rel="stylesheet" href="/route-element/assets/forms-7ef0a9c6.css">
   </head>
   <body>
